# gpf-alignment

./: README.md  data.dvc  environment.yml  pyproject.toml  requirements.txt
.dvc/: config
classify-embeddings/: GPF_training.py  classifier_test_max_context.py  leave_one_out_test.py
gpf_alignment/: __init__.py  classify.py  dataloader.py  embeddings.py  mbsse.py  xlsx_utils.py
grade-level/: export_mbsse_extras_for_nfer.py  extract_appendix_b.py  grade_level_feature_tables.py  grade_level_gq.py  grade_level_manual_prompt.py  interpolate_grade_features.py  manually_filter_mbsse.py  ml_multiple_agent_grade_feature_RC.py
