[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gpf-alignment"
version = "0.0.1"
description = "Automating alignment to the Global Proficiency Framework"
authors = [ {name = "Fab Inc."} ]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "pydantic",
    "pandas",
    "lxml",
    "openpyxl",
    "pillow"
]